tests/circuits/valids/two_links_from_output.nts
.chipsets:
input   a
output  s1
output  s2
.links:
a:1     s1:1
a:1     s2:1