tests/circuits/invalids/link_input_to_input.nts
.chipsets:
output  s1
output  s2
.links:
s1:1    s2:1